[package]
name = "rotated-array-set"
version = "0.1.1"
authors = ["Tobin Baker <tobin.d.baker@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "An ordered set supporting O(1) rank and O(√n) inserts and deletes"
repository = "https://github.com/senderista/rotated-array-set"
exclude = ["img/*"]

[lib]
name = "rotated_array_set"
path = "src/lib.rs"
bench = false

[dependencies]
is_sorted = "0.1.1"

[dev-dependencies]
criterion = "0.3.0"
proptest = "0.9"
lazy_static = "1.4"
rand = "0.6.5"

[[bench]]
name = "my_benchmark"
harness = false
